# path-duplication-launch

./: CMakeLists.txt  package.xml
config/: crossbow_gps_ins.yaml  gps_ins_crossbow_parameters.yaml  kvh1725_centerMiddleAntenna.yaml  kvh1725_drtk_centerAntenna.yaml  kvh1725_leftAntenna.yaml  kvh1725_rightAntenna.yaml
launch/: crossbow.launch  curvature_wtf.launch  dbw_for_speed_and_steer.launch  dbw_for_speed_control.launch  dbw_for_steer_only.launch  drtk.launch  drtk_debug.launch  drtk_dual.launch  drtk_for_pd_truth.launch  drtk_playback.launch  dual_antenna_playback.launch  dual_gps_ins.launch  g35_mkz_pd_urdf.launch  gps_ins.launch  kvh1725.launch  kvh_gps_ins.launch  main_cascade_step_control.launch  main_heading_control.launch  main_mkz_pd.launch  main_mkz_pd_rpv.launch  main_mkz_self_pd.launch  main_pd.launch  mkz_align_data_collect.launch  mkz_control.launch  mkz_dual_antenna_sys_id.launch  mkz_pd_latpos.launch  mkz_steer_control.launch  mkz_viz.launch  novatel.launch  novatel_base.launch  novatel_front.launch  novatel_rear.launch  novatel_rear_dual.launch  novatel_rear_right.launch  path_duplication.launch  path_duplication_vehicle_viz.launch  path_duplication_viz.launch  playback_lateral_feedback_pd.launch  playback_pd.launch  playback_prowler_heading_control.launch  (+11 more)
msg/: DualAntennaOutput.msg
rviz/: path.rviz  path_enu.rviz
scripts/: base_drtk_to_odom.py  batch_drtk_process.py  batch_md5_fix.py  dual_antenna.py  dual_antenna_attitude.py  gps_time_fix.py  md5_fix.py  merge_and_md_fix.sh  path_control_sim.py  process.sh  test.py
