<?xml version="1.0"?>
<package>
  <name>path_duplication_launch</name>
  <version>0.0.0</version>
  <description>The path_duplication_launch package</description>

  <maintainer email="jdp0009@auburn.edu">Dan Pierce</maintainer>

  <license>GAVLAB</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <run_depend>std_msgs</run_depend>

  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
  
  <export>
  </export>
</package>
